# sim-office

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml
.github/: dependabot.yml  pull_request_template.md
crates/sim-codec-mspdi/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-mspdi/recipes/: book.toml
crates/sim-codec-mspdi/recipes/01-basics/: chapter.toml
crates/sim-codec-mspdi/recipes/01-basics/mspdi-round-trip/: purpose.md  recipe.toml  setup.siml
crates/sim-codec-mspdi/src/: lib.rs  model.rs  read.rs  tests.rs  write.rs
crates/sim-codec-odf/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-odf/recipes/: book.toml
crates/sim-codec-odf/recipes/01-basics/: chapter.toml
crates/sim-codec-odf/recipes/01-basics/odp-round-trip/: purpose.md  recipe.toml  setup.siml
crates/sim-codec-odf/recipes/01-basics/ods-round-trip/: purpose.md  recipe.toml  setup.siml
crates/sim-codec-odf/src/: lib.rs  odp.rs  ods.rs  package.rs  package_tests.rs  tests.rs
crates/sim-lib-deck/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-deck/recipes/: book.toml
crates/sim-lib-deck/recipes/01-basics/: chapter.toml
crates/sim-lib-deck/recipes/01-basics/deck-outline/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-deck/src/: doc.rs  graph_file.rs  lib.rs  model.rs
crates/sim-lib-doc-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-core/recipes/: book.toml
crates/sim-lib-doc-core/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-core/recipes/01-basics/doc-core-descriptor/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-core/src/: caps.rs  edit.rs  error.rs  evidence.rs  fidelity.rs  lib.rs  model.rs  place.rs  projection.rs  shape.rs  zip_package.rs
crates/sim-lib-doc-ledger/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-ledger/recipes/: book.toml
crates/sim-lib-doc-ledger/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-ledger/recipes/01-basics/ledger-draft-preview/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-ledger/src/: bridge.rs  draft.rs  lib.rs  projection.rs
crates/sim-lib-doc-markup/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-markup/recipes/: book.toml
crates/sim-lib-doc-markup/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-markup/recipes/01-basics/markup-doc-codec/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-markup/src/: codec.rs  lib.rs  store.rs  surface.rs  tests.rs
crates/sim-lib-doc-site/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-site/recipes/: book.toml
crates/sim-lib-doc-site/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-site/recipes/01-basics/doc-site-descriptor/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-site/src/: lib.rs  register.rs  register_tests.rs
crates/sim-lib-doc-store/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-store/recipes/: book.toml
crates/sim-lib-doc-store/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-store/recipes/01-basics/doc-store-projection/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-store/recipes/01-basics/evidence-fact-graph/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-store/src/: codec.rs  evidence.rs  lib.rs  schema.sql  store.rs  store_tests.rs
crates/sim-lib-doc-surface/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-doc-surface/recipes/: book.toml
crates/sim-lib-doc-surface/recipes/01-basics/: chapter.toml
crates/sim-lib-doc-surface/recipes/01-basics/suite-surface-descriptor/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-doc-surface/src/: intent.rs  lib.rs  scene.rs
crates/sim-lib-gantt/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-gantt/recipes/: book.toml
crates/sim-lib-gantt/recipes/01-basics/: chapter.toml
crates/sim-lib-gantt/recipes/01-basics/local-gantt-plan/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-gantt/src/: critical.rs  lib.rs  local.rs  model.rs  schema.sql
crates/sim-lib-mail/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-mail/recipes/: book.toml
crates/sim-lib-mail/recipes/01-basics/: chapter.toml
crates/sim-lib-mail/recipes/01-basics/mail-calendar-summary/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-mail/src/: doc.rs  graph.rs  graph_tests.rs  lib.rs  model.rs  redact.rs
crates/sim-lib-office-pack/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-office-pack/recipes/: book.toml
crates/sim-lib-office-pack/recipes/01-basics/: chapter.toml
crates/sim-lib-office-pack/src/: archive.rs  export.rs  lib.rs  pack.rs  tests.rs
crates/sim-lib-sheet/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-sheet/recipes/: book.toml
crates/sim-lib-sheet/recipes/01-basics/: chapter.toml
crates/sim-lib-sheet/recipes/01-basics/exact-sheet-formula/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-sheet/src/: doc.rs  formula.rs  graph.rs  lib.rs  model.rs  model_tests.rs  tests.rs
crates/sim-site-dalux/: BROCHURE.md  Cargo.toml  README.md
crates/sim-site-dalux/recipes/: book.toml
crates/sim-site-dalux/recipes/01-basics/: chapter.toml
crates/sim-site-dalux/recipes/01-basics/dalux-modeled-items/: purpose.md  recipe.toml  setup.siml
crates/sim-site-dalux/src/: client.rs  lib.rs  model.rs  modeled.rs  tests.rs
crates/sim-site-msgraph/: BROCHURE.md  Cargo.toml  README.md
crates/sim-site-msgraph/recipes/: book.toml
crates/sim-site-msgraph/recipes/01-basics/: chapter.toml
crates/sim-site-msgraph/recipes/01-basics/msgraph-modeled-read/: purpose.md  recipe.toml  setup.siml
crates/sim-site-msgraph/src/: auth.rs  client.rs  client_tests.rs  lib.rs  modeled.rs  site.rs
crates/sim-site-powerproject/: BROCHURE.md  Cargo.toml  README.md
crates/sim-site-powerproject/recipes/: book.toml
crates/sim-site-powerproject/recipes/01-basics/: chapter.toml
crates/sim-site-powerproject/recipes/01-basics/powerproject-placement/: purpose.md  recipe.toml  setup.siml
crates/sim-site-powerproject/src/: dataverse.rs  lib.rs  modeled.rs  ole.rs  tests.rs
helpers/: libreoffice_bridge.py
office-js/: excel_bridge.ts  (+2 more)
(+58 files in other folders)
