[workspace]
resolver = "3"
members = [
  "crates/sim-codec-odf",
  "crates/sim-codec-ooxml",
  "crates/sim-lib-deck",
  "crates/sim-lib-doc-core",
  "crates/sim-lib-doc-ledger",
  "crates/sim-lib-gantt",
  "crates/sim-lib-doc-markup",
  "crates/sim-lib-doc-site",
  "crates/sim-lib-doc-store",
  "crates/sim-lib-doc-surface",
  "crates/sim-lib-mail",
  "crates/sim-lib-office-pack",
  "crates/sim-lib-sheet",
  "crates/sim-site-libreoffice",
  "crates/sim-site-msgraph",
  "crates/sim-site-sharepoint",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch."https://github.com/sim-nest/sim-office"]
sim-lib-doc-core = { path = "crates/sim-lib-doc-core" }
sim-lib-gantt = { path = "crates/sim-lib-gantt" }
