[package]
name = "sim-codec-mspdi"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "MSPDI schedule codec for SIM office Gantt documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
roxmltree = "0.21"
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }
sim-lib-gantt = { version = "0.1.0", path = "../sim-lib-gantt" }
time = "0.3"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
