[package]
name = "sim-codec-odf"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "ODF spreadsheet and presentation codecs for SIM office documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
roxmltree = "0.21"
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-deck = { version = "0.1.0", path = "../sim-lib-deck" }
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }
sim-lib-sheet = { version = "0.1.0", path = "../sim-lib-sheet" }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
