[package]
name = "sim-lib-deck"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Presentation deck domain model for SIM office documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }
zip = { version = "=2.4.2", default-features = false }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
