[package]
name = "sim-lib-doc-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Core document records and shape hooks for SIM office documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
serde = { version = "1", features = ["derive"] }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
