[package]
name = "sim-lib-doc-ledger"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Ring-3 office bridge for ledger draft previews."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-ledger = {
  version = "0.1.0",
  git = "https://github.com/sim-nest/sim-ledger",
  rev = "0c561a8a3a7f1cd7a48024b365ec7cc23e8db6ff",
}
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }
sim-lib-ledger-books = {
  version = "0.1.0",
  git = "https://github.com/sim-nest/sim-ledger",
  rev = "0c561a8a3a7f1cd7a48024b365ec7cc23e8db6ff",
}

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
time = "0.3"

[lints]
workspace = true
