[package]
name = "sim-lib-doc-markup"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Markup document codecs for SIM office documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
sim-codec-doc = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
