[package]
name = "sim-lib-doc-markup"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Markup document codecs for SIM office documents."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-office"
homepage = "https://github.com/sim-nest/sim-office"

[dependencies]
sim-codec-doc = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-doc-core = { version = "0.1.0", path = "../sim-lib-doc-core" }
sim-lib-doc-store = { version = "0.1.0", path = "../sim-lib-doc-store" }
sim-lib-intent = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.0" }
sim-lib-view-doc = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-lib-doc-surface = { version = "0.1.0", path = "../sim-lib-doc-surface" }
sim-value = { version = "0.1.0" }
tempfile = "3"

[lints]
workspace = true
